New install instructions using composer. Composer packages adjusted (#96)
* New install instructions using composer. Composer packages adjusted

* Packagist package created and referenced now in composer.json

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,6 @@
         "ext-pcntl": "If you plan to take advantage of eZ Publish Async publishing feature, then pcntl extension is required",
         "ezsystems/ezsi-ls": "ezsi would allow you to use Edge/Server Side Includes of blocks in templates",
         "ezsystems/ezscriptmonitor-ls": "ezscriptmonitor makes it possible to better deal with long running bulk operations within eZ Publish",
-        "ezsystems/ezfind-ls": "ezfind is a Solr based advance search engine for eZ Publish with a lot more features then the built in search",
         "ezsystems/eztags-ls": "eztags is a full tagging/taxonomy solution for eZ Publish replacing the simpler builtin ezkeywords datatype"
     },
     "require": {
@@ -30,16 +29,9 @@
         "ext-simplexml": "*",
         "ezsystems/ezpublish-legacy-installer": "*",
         "ezsystems/ezautosave-ls": "~5.3",
-        "ezsystems/ezdemo-ls-extension": "~5.4",
         "ezsystems/ezflow-ls-extension": "~5.3",
-        "ezsystems/ezgmaplocation-ls-extension": "~5.3",
-        "ezsystems/ezie-ls": "~5.3",
-        "ezsystems/ezmbpaex-ls": "~5.3",
-        "ezsystems/ezmultiupload-ls": "~5.3",
-        "ezsystems/ezodf-ls": "~5.3",
-        "ezsystems/ezprestapiprovider-ls": "~5.3",
-        "ezsystems/ezstarrating-ls-extension": "~5.3",
         "ezsystems/ezwt-ls-extension": "~5.3",
+        "mugoweb/ezfind": "dev-master",
         "zetacomponents/archive": "~1.5",
         "zetacomponents/authentication": "~1.4",
         "zetacomponents/authentication-database-tiein": "~1.2",
