Update to make breakoutspace enabled by default

--- a/extension/ezoe/settings/ezoe.ini
+++ b/extension/ezoe/settings/ezoe.ini
@@ -31,7 +31,7 @@ Plugins[]=autolink
 # list plugin
 Plugins[]=lists
 # Support CTRL+Enter to exit a custom tag
-#Plugins[]=breakoutspace
+Plugins[]=breakoutspace
 
 # Skin for the editor, 'default' and 'o2k7' is included as standard
 Skin=o2k7
