--- a/extension/ezoe/settings/ezoe.ini
+++ b/extension/ezoe/settings/ezoe.ini
@@ -30,6 +30,8 @@ Plugins[]=inlinepopups
 Plugins[]=autolink
 # list plugin
 Plugins[]=lists
+# Support CTRL+Enter to exit a custom tag
+Plugins[]=breakoutspace
 
 # Skin for the editor, 'default' and 'o2k7' is included as standard
 Skin=o2k7
