Update conflict to depend on 7.2 for dependent changes
_(2017.12.x stays compatible with 6.13)_

--- a/composer.json
+++ b/composer.json
@@ -78,7 +78,7 @@
       ]
     },
     "conflict": {
-        "ezsystems/ezpublish-kernel": "<6.13 || >=2014.11 <2017.12"
+        "ezsystems/ezpublish-kernel": "<7.2 || >=2013.4"
     },
     "extra": {
         "branch-alias": {
