Always regenerate autoloads, package hosting URL changed (#114)

--- a/settings/package.ini
+++ b/settings/package.ini
@@ -12,10 +12,7 @@
 [RepositorySettings]
 RepositoryDirectory=packages
 # URL where eZ Publish setup wizard will fetch packages from
-# If you want to use the old packages which were available in
-# versions prior to 3.9 use the following URL instead:
-# http://packages.ez.no/ezpublish/3.9legacypackages
-RemotePackagesIndexURL=http://packages.ez.no/ezpublish/5.4/5.4.0
+RemotePackagesIndexURL=https://storage.googleapis.com/lovestack
 # If RemotePackagesIndexURL is empty, the RemotePackagesIndexURLBase setting
 # will be used, appended with the eZ Publish version numbers, like
 # RemotePackagesIndexURLBase/x.y/x.y.zalpha1
