New module to show the ez site data content (#121)
* New module to show the ez site data content

* Filter was changing to the "db filter" - fixed now

--- a/settings/menu.ini
+++ b/settings/menu.ini
@@ -397,6 +397,9 @@ Links[sections]=section/list
 Links[sessions]=setup/session
 PolicyList_sessions[]=setup/administrate
 
+Links[sitedata]=sitedata/list
+PolicyList_sessions[]=sitedata/list
+
 Links[states]=state/groups
 PolicyList_states[]=state/administrate
 
