--- a/settings/module.ini
+++ b/settings/module.ini
@@ -45,6 +45,7 @@ ModuleList[]=section
 ModuleList[]=settings
 ModuleList[]=setup
 ModuleList[]=shop
+ModuleList[]=sitedata
 ModuleList[]=state
 ModuleList[]=trigger
 ModuleList[]=url
