Add drag and drop priority sorting to legacy Administration Interface

--- a/settings/design.ini
+++ b/settings/design.ini
@@ -57,5 +57,5 @@ BackendJavaScriptList[]=fixed_toolbar.js
 BackendJavaScriptList[]=ezmodalwindow.js
 BackendJavaScriptList[]=ezajaxuploader.js
 BackendJavaScriptList[]=ezcollapsiblemenu.js
-
-
+BackendJavaScriptList[]=ezjsc::jqueryUI
+BackendJavaScriptList[]=admin2pp_dragndrop_children.js
