Custom tag improvements (#116)

--- a/extension/ezoe/settings/ezoe.ini
+++ b/extension/ezoe/settings/ezoe.ini
@@ -8,6 +8,7 @@
 # plugins not mentioned here aren't tested and therefore not supported together with Online Editor
 Plugins[]
 Plugins[]=eztable
+Plugins[]=custom_tags_controls
 #Plugins[]=insertdatetime
 #Plugins[]=visualchars
 # Support for button to insert nonbreaking white space
