#607 - Bug fix: INI settings don't support loose typing (#134)
* Update ini setting to an empty array

* Updating inline doc

--- a/settings/contentstructuremenu.ini
+++ b/settings/contentstructuremenu.ini
@@ -36,9 +36,8 @@ MaxNodes=150
 #    SortBy[]
 #    SortBy[]=name/ascending
 #    SortBy[]=published/descending
-# if set to "false" - default sorting will be implemented
-# (which is defined for each node)
-SortBy=false
+# if not set - it usese the sorting defined for each node (Ordering)
+SortBy[]
 
 # enabled/disabled
 ToolTips=enabled
