Fix typo in SortBy documentation

--- a/settings/contentstructuremenu.ini
+++ b/settings/contentstructuremenu.ini
@@ -36,7 +36,7 @@ MaxNodes=150
 #    SortBy[]
 #    SortBy[]=name/ascending
 #    SortBy[]=published/descending
-# if not set - it usese the sorting defined for each node (Ordering)
+# if not set, it uses the sorting defined for each node (from the Ordering tab)
 SortBy[]
 
 # enabled/disabled
