Update ezpublish-kernel conflict config

--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,7 @@
       ]
     },
     "conflict": {
-        "ezsystems/ezpublish-kernel": "<6.12 || >=2014.11 <2017.10"
+        "ezsystems/ezpublish-kernel": "<6.12"
     },
     "replace": {
         "ezsystems/ezpublish-legacy": "*"
