--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,7 @@
       ]
     },
     "conflict": {
-        "ezsystems/ezpublish-kernel": "<6.12"
+        "ezsystems/ezpublish-kernel": "<7.3 || >=2013.4"
     },
     "replace": {
         "ezsystems/ezpublish-legacy": "*"
