Fix not set setting definition

--- a/settings/contentstructuremenu.ini
+++ b/settings/contentstructuremenu.ini
@@ -37,7 +37,7 @@ MaxNodes=150
 #    SortBy[]=name/ascending
 #    SortBy[]=published/descending
 # if not set, it uses the sorting defined for each node (from the Ordering tab)
-SortBy=[]
+SortBy[]
 
 # enabled/disabled
 ToolTips=enabled
