[Composer] Update description (and also push updated branch info to packagist)

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name":        "ezsystems/ezpublish-legacy",
-    "description": "eZ Publish LegacyStack (4.x)",
+    "description": "eZ Publish Legacy (aka LegacyStack in 5.x. Is an updated version of eZ Publish 4.x cable of being combined with eZ Platform)",
     "homepage":    "http://share.ez.no",
     "license":     "GPL-2.0-only",
     "type":        "ezpublish-legacy",
