Allow to configure the tpl edit URL in the Used Templates list (#147)
* Allow to configure the tpl edit URL in the Used Templates list

* Adding more inline doc

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -309,6 +309,14 @@ QuickSettingsList[]=TemplateSettings;Debug;site.ini;Template debug
 QuickSettingsList[]=TemplateSettings;ShowUsedTemplates;site.ini;List of used templates
 QuickSettingsList[]=DatabaseSettings;SQLOutput;site.ini;SQL debug output
 
+# Allow to adjust the edit URL in the list of used templates.
+# The code is using sprintf to render the URL and here you can
+# control where to fill the placeholders.
+# %1$s is the value of $templateEditURI (URL to a module/view showing an HTML editor)
+# %2$s is the value of $currentSiteAccess
+# %3$s is the value of $templateFileName
+UsedTemplateEditUrl=%1$s/(siteAccess)/%2$s
+
 [HTMLForms]
 ## Settings dealing with HTML forms and security aspects of it.
 # Setting to specify a secret for the csrf protection, it
