[PHP] Fix some PHP 7.2 deprecations (#164)

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "ezsystems/ezautosave-ls": "~5.3",
         "ezsystems/ezflow-ls-extension": "~5.3",
         "ezsystems/ezwt-ls-extension": "~5.3",
+        "symfony/polyfill-php73":  "^1.9",
         "mugoweb/ezfind": "^2019.03",
         "zetacomponents/archive": "~1.5",
         "zetacomponents/authentication": "~1.4",
