EZP-31040: Remote Code Execution in file uploads
(cherry picked from commit 8c9b70662785b53ebca13f7c7fdaece05bfb132f)

--- a/settings/file.ini
+++ b/settings/file.ini
@@ -33,6 +33,17 @@ Handlers[gzip]=ezgzipcompressionhandler
 Handlers[gzipzlib]=ezgzipzlibcompressionhandler
 Handlers[gzipshell]=ezgzipshellcompressionhandler
 
+# The file extension blacklist is used to validate uploaded files.
+# File types on the blacklist are rejected, for security or other reasons.
+FileExtensionBlackList[]
+FileExtensionBlackList[]=php
+FileExtensionBlackList[]=php3
+FileExtensionBlackList[]=phar
+FileExtensionBlackList[]=phpt
+FileExtensionBlackList[]=pht
+FileExtensionBlackList[]=phtml
+FileExtensionBlackList[]=pgif
+
 [ClusteringSettings]
 # Cluster file handler.
 # Since 4.1 name of the filehandlers have changed
