--- a/settings/contentstructuremenu.ini
+++ b/settings/contentstructuremenu.ini
@@ -36,7 +36,7 @@ MaxNodes=150
 #    SortBy[]
 #    SortBy[]=name/ascending
 #    SortBy[]=published/descending
-# if not set, it uses the sorting defined for each node (from the Ordering tab)
+# if an empty array, it uses the sorting defined for each node instead (from the Ordering tab)
 SortBy[]
 
 # enabled/disabled
