Removing example siteaccesses (#178)
* Removing example siteaccesses

* Making Unit tests happy - adding new siteaccess for unit tests

* Changing the DefaultSiteaccess to force unittests to use it

* Fixing unit tests with an explicit siteaccess for the tests

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -420,7 +420,8 @@ ErrorHandler=displayerror
 DefaultPage=/content/view/full/2/
 # Default access is needed when uri type matching is done, this is
 # because with empty urls it's not possible to fetch the access
-DefaultAccess=admin
+# The siteaccess "test" is used by the unit tests.
+DefaultAccess=test
 # How the login page should be handled, use embedded to show inside default pagelayout
 # or custom for loginpagelayout.tpl
 LoginPage=custom
