Use php rawurlencode instead of urlencode (#193)
* Use php rawurlencode instead of urlencode

* Not changing existing entries

--- a/settings/template.ini
+++ b/settings/template.ini
@@ -52,6 +52,8 @@ EmailAtText=<span class="spamfilter">SPAMFILTER</span>@
 PHPOperatorList[]
 PHPOperatorList[urlencode]=urlencode
 PHPOperatorList[urldecode]=urldecode
+PHPOperatorList[rawurlencode]=rawurlencode
+PHPOperatorList[rawurldecode]=rawurldecode
 
 [AutoLinkOperator]
 # The maximum number of characters to show in autolink
