Broken dashboard widget for latest forum news removed, maintenance template adjusted (#196)
* Broken dashboard widget for latest forum news removed, maintenance template adjusted

* Typo fixed

--- a/settings/dashboard.ini
+++ b/settings/dashboard.ini
@@ -6,7 +6,7 @@ DashboardBlocks[]=pending_list
 DashboardBlocks[]=drafts
 DashboardBlocks[]=latest_content
 DashboardBlocks[]=all_latest_content
-DashboardBlocks[]=community_activity
+#DashboardBlocks[]=community_activity
 # DashboardBlocks[]=wishlist
 
 # [DashboardBlock_example]
