Small improvements for the installation process (#199)
* ext-intl as required in composer, more details to explain the installation process

* Typo fixed

* Using better utf8 mysql support

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "ext-session": "*",
         "ext-spl": "*",
         "ext-simplexml": "*",
+        "ext-intl": "*",
         "symfony/polyfill-php73":  "^1.9",
         "ezsystems/ezpublish-legacy-installer": "*",
         "zetacomponents/archive": "~1.5",
