Updated: Added Support for WebP Images (#212)

--- a/settings/image.ini
+++ b/settings/image.ini
@@ -38,6 +38,7 @@ ImagePermissions=0666
 # This determines which formats you want your web page to display
 AllowedOutputFormat[]
 AllowedOutputFormat[]=image/jpeg
+AllowedOutputFormat[]=image/webp
 AllowedOutputFormat[]=image/png
 AllowedOutputFormat[]=image/gif
 
@@ -174,6 +175,7 @@ Quality[]=image/jpeg;75
 # The global conversion rules
 # Most will be converted to jpeg except gif and xpms
 ConversionRules[]
+ConversionRules[]=image/webp;image/png
 ConversionRules[]=image/gif;image/png
 ConversionRules[]=image/x-xpixmap;image/png
 ConversionRules[]=*;image/jpeg
@@ -345,6 +347,7 @@ Filters[]=resize=-resize %1
 
 # Maps a MIME type to a tag name which is prepended to the destination name for ImageMagick
 MIMETagMap[]=image/x-xpixmap;XPM
+MIMETagMap[]=image/webp;WEBP
 MIMETagMap[]=image/png;PNG
 MIMETagMap[]=image/jpeg;JPEG
 MIMETagMap[]=image/bmp;BMP
@@ -412,6 +415,9 @@ MIMEList[]=image/gif
 
 #Portable Network Graphics
 MIMEList[]=image/png
+
+#Google WebP Image Format
+MIMEList[]=image/webp
 
 #TIFF
 MIMEList[]=image/tiff
