--- a/settings/mime.ini
+++ b/settings/mime.ini
@@ -540,6 +540,9 @@ Types[]=image/vnd.wap.wbmp
 Types[]=video/webm
 Types[]=audio/webm
 
+[webp]
+Types[]=image/webp
+
 [wml]
 Types[]=text/vnd.wap.wml
 
